Fixed layout bugs in publications

--- a/assets/css/_custom.scss
+++ b/assets/css/_custom.scss
@@ -350,3 +350,9 @@ p a.lightgallery {
 .header-title a {
   text-decoration: none;
 }
+
+.publication img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
